// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Message Box Default 1`] = `
<div
  class="fd-message-box-docs-static fd-message-box fd-message-box--active"
>
  
    
  <section
    class="fd-message-box__content"
  >
    
        
    <header
      class="fd-bar fd-bar--header fd-message-box__header"
    >
      
            
      <div
        class="fd-bar__left"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <i
            class="fd-message-box__icon"
          />
          
                    
          <h2
            class="fd-title fd-title--h5 fd-message-box__title"
          >
            Title
          </h2>
          
                
        </div>
        
            
      </div>
      
        
    </header>
    
        
    <div
      class="fd-message-box__body"
    >
      
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
        
    </div>
    
        
    <footer
      class="fd-bar fd-bar--footer fd-message-box__footer"
    >
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
          >
            
                        Begin button
                    
          </button>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--transparent fd-button--compact fd-message-box__decisive-button"
          >
            
                        End button
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </footer>
    
    
  </section>
  

</div>
`;

exports[`Storyshots Components/Message Box No icon 1`] = `
<section>
  

  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--success fd-message-box--no-icon fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Success
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Success message box without an icon in the title and a "Show more" link in the body.
            
        <div
          class="fd-message-box__more"
        >
          
                
          <a
            class="fd-link"
            href="#"
            tabindex="0"
          >
            Show more
          </a>
          
            
        </div>
        
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--error fd-message-box--no-icon fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Error
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Error message box without an icon in the title.
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Message Box Responsive 1`] = `
<section>
  

  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--information fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content fd-message-box__content--s"
    >
      
        
      <header
        class="fd-bar fd-bar--cozy fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Information
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Informative message box for a small screen in cozy mode (mobile) and a "Show more" link in the body.
            
        <div
          class="fd-message-box__more"
        >
          
                
          <a
            class="fd-link"
            href="#"
            tabindex="0"
          >
            Show more
          </a>
          
            
        </div>
        
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--cozy fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--error fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content fd-message-box__content--m"
    >
      
        
      <header
        class="fd-bar fd-bar--cozy fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Error
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Error message box for a medium-sized screen in cozy mode (mobile). 
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--cozy fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  



  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--success fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content fd-message-box__content--l"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Success
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Success message box for a large screen in compact mode (desktop).
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--warning fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content fd-message-box__content--xl"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
             
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Warning
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
           Warning message box for an extra large screen in compact mode (desktop). 
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Message Box Semantic types 1`] = `
<section>
  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--confirmation fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Confirmation
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        OK
                    
            </button>
            
                
          </div>
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--transparent fd-button--compact fd-message-box__decisive-button"
            >
              
                        Cancel
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--error fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Error
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--success fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Success
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Vivamus sagittis diam in vehicula lobortis sapien arcu mattis erat vel aliquet sem urna et mattis erat vel aliquet in sem urna et sagittis diam in vehicula.
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--warning fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Warning
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Vivamus sagittis diam in vehicula lobortis sapien arcu mattis erat vel aliquet sem urna et. 
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--information fd-message-box--active"
  >
    
    
    <section
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <i
              class="fd-message-box__icon"
            />
            
                    
            <h2
              class="fd-title fd-title--h5 fd-message-box__title"
            >
              Information
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Vivamus sagittis diam in vehicula lobortis. 
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </section>
    

  </div>
  

</section>
`;
